@@ -1,37 +1,24 @@
 package slimeknights.tconstruct.common.data.loot;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
-import net.minecraft.data.DataGenerator;
+import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.level.storage.loot.LootTable;
-import net.minecraft.world.level.storage.loot.LootTables;
-import net.minecraft.world.level.storage.loot.ValidationContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
-import slimeknights.tconstruct.TConstruct;
 
 import java.util.List;
-import java.util.Map;
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
+import java.util.Set;
 
 public class TConstructLootTableProvider extends LootTableProvider {
+  private static final Set<ResourceLocation> REQUIRED_TABLES = Set.of();
 
-  private LootTableProvider x;
-  private final List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> lootTables = ImmutableList.of(Pair.of(BlockLootTableProvider::new, LootContextParamSets.BLOCK), Pair.of(AdvancementLootTableProvider::new, LootContextParamSets.ADVANCEMENT_REWARD), Pair.of(EntityLootTableProvider::new, LootContextParamSets.ENTITY));
-
-  public TConstructLootTableProvider(DataGenerator gen) {
-    super(gen);
+  public TConstructLootTableProvider(PackOutput packOutput) {
+    super(packOutput, REQUIRED_TABLES, List.of(
+      new LootTableProvider.SubProviderEntry(BlockLootTableProvider::new, LootContextParamSets.BLOCK),
+      new LootTableProvider.SubProviderEntry(AdvancementLootTableProvider::new, LootContextParamSets.ADVANCEMENT_REWARD),
+      new LootTableProvider.SubProviderEntry(EntityLootTableProvider::new, LootContextParamSets.ENTITY)));
   }
 
-  @Override
-  protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-    return lootTables;
-  }
-
+  /*
   @Override
   protected void validate(Map<ResourceLocation,LootTable> map, ValidationContext validationtracker) {
     map.forEach((loc, table) -> LootTables.validate(validationtracker, loc, table));
@@ -39,12 +26,13 @@ public class TConstructLootTableProvider extends LootTableProvider {
     // This ensures the remaining generator logic doesn't write those to files.
     map.keySet().removeIf((loc) -> !loc.getNamespace().equals(TConstruct.MOD_ID));
   }
-
-  /**
-   * Gets a name for this provider, to use in logging.
    */
+
+  /*
+   * Gets a name for this provider, to use in logging.
+   *
   @Override
   public String getName() {
     return "TConstruct LootTables";
-  }
+  }*/
 }
